# DiscordAnalyzeBot

./: .dockerignore  .gitignore  Dockerfile  README.md  _docker-compose.yaml  _env  debug_sudachi.py  pyproject.toml  test_extract_tokens.py
.github/workflows/: docker-tag.yaml  ruff.yaml
argocd/base/: bot-deployment.yaml  clickhouse-deployment.yaml  clickhouse-pvc.yaml  clickhouse-service.yaml  hp-deployment.yaml  hp-hpa.yaml  hp-ingress.yaml  hp-service.yaml  kustomization.yaml  mongo-deployment.yaml  mongo-pvc.yaml  mongo-service.yaml  secret.yaml  updater.yaml
src/: config.py  main.py  version.py
src/cogs/: about.py  admin.py  network.py  optout.py  ping.py  statistics.py  utils.py  wordcloud.py
src/libs/: embed.py  message_store.py  meta_store.py  migration.py  network_service.py  parser.py  settings_store.py  storage.py  text_processing.py  visualization_common.py  visualize.py  wordcloud_service.py
tests/: test_message_store.py  test_migration.py  test_network_service.py  test_settings_store.py  test_storage.py  test_text_processing.py  test_wordcloud_service.py
